# project_management

./: .gitignore  .replit  AUTHENTICATION_404_FIXES.md  CLAUDE.md  COMPANY_CREATION_FIX_SUMMARY.md  COMPREHENSIVE_REVIEW_AND_FIXES.md  DATABASE_CONFIGURATION.md  FEATURE_STATUS.md  FINAL_MVP_DEPLOYMENT_SUMMARY.md  FRONTEND_RBAC_TEST_GUIDE.md  FRONTEND_RBAC_TEST_SUMMARY.md  INDEPENDENT_SERVERS.md  LANDING_PAGE.md  LANDING_PAGE_SPECS.md  LICENSE  LOCAL_SETUP.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_FIX_SUMMARY.md  PRODUCTION_SAFETY.md  RBAC_FIXES_APPLIED.md  RBAC_MIGRATION_TO_FASTAPI.md  RBAC_ROLE_FIXES.md  RBAC_UI.md  RBAC_USERS_FIX_SUMMARY.md  RBAC_USER_ENDPOINTS_FIX_SUMMARY.md  README.md  ROLES_TABLE_MIGRATION.md  ROLE_MIGRATION_COMPLETE.md  SECURITY_FIXES_REPORT.md  SERVER_RELIABILITY_IMPROVEMENTS.md  SETUP_AND_TEST.md  SETUP_CHECKLIST.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  backend_daemon.py  comprehensive_backend_test_results.md  comprehensive_delete_operations_test_results.md  comprehensive_test_results.md  cookies.txt  create_root_admin.py  (+57 more)
attached_assets/: Pasted--1-Hero-headline-hierarchy-360-Project-Management-is-clear-but-a-short-benefit-first-line-above-1754187604657_1754187604658.txt  Pasted--1-Put-every-user-even-the-SaaS-owner-inside-Company-0-the-platform-tenant-Multi-tenant-Saa-1753983177646_1753983177647.txt  Pasted--1-Summary-Bar-Refinement-Give-the-bar-a-subtle-F8F9FB-backdrop-so-it-stands-out-from-the-white--1754186681991_1754186681992.txt  (+28 more)
client/: index.html
docs/: client-onboarding.md  stage-template-flow.html
python_backend/: main.py  (+16 more)
(+513 files in other folders)
